# ectf-workshop

./: .gitignore  Makefile  README.md  activate.sh  setup.sh
src/design1/decoder/: Makefile  project.mk
src/design1/decoder/inc/: host_messaging.h  simple_crypto.h
src/design1/decoder/src/: decoder.c  host_messaging.c  simple_crypto.c
src/design1/design/ectf25_design/: encoder.py  gen_secrets.py  gen_subscription.py
src/design2/decoder/: Dockerfile  project.mk
src/design2/decoder/inc/: crypto_utils.h
src/design2/decoder/src/: crypto_utils.c  decoder.c  host_messaging.c
src/design2/design/ectf25_design/: encoder.py  gen_secrets.py  gen_subscription.py
src/design3/decoder/: Dockerfile  Makefile  build.sh  firmware.ld.template
src/design3/decoder/inc/: common.h  crypto_wrappers.h  fiproc.h  frame.h  hardware_init.h  host_messaging.h  host_uart.h  list_subscriptions.h  lockout.h  rng.h  secrets.h  string.h  subscription.h  util.h
src/design3/decoder/ppp_common/: pyproject.toml
src/design3/decoder/ppp_common/ppp_common/: crypto_wrappers.py  cstruct.py  gen_secrets.py  gen_secrets_c.py  gen_subscription.py  symbol_shimmy.py
src/design3/decoder/src/: crt0.S  crypto_wrappers.c  fiproc.c  frame.c  hardware_init.c  host_messaging.c  host_uart.c  libdesign3.c  list_subscriptions.c  lockout.c  main.c  rng.c  subscription.c  util.c
src/design3/design/: pyproject.toml  setup.py
src/design3/design/ectf25_design/: encoder.py  gen_secrets.py  gen_subscription.py
src/insecure/: README.md
src/insecure/decoder/: Dockerfile
(+1 files in other folders)
